--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     -->
     <ion-nav-bar class="bar-calm nav-title-slide-ios7">
       <ion-nav-back-button class="button-icon icon  ion-ios7-arrow-back">
-        Back
+        Nazad
       </ion-nav-back-button>
     </ion-nav-bar>
     <!-- 
