--- a/index.html
+++ b/index.html
@@ -29,14 +29,20 @@
     -->
     <ion-nav-bar class="bar-calm nav-title-slide-ios7">
       <ion-nav-back-button class="button-icon icon  ion-ios7-arrow-back">
-        Nazad
       </ion-nav-back-button>
     </ion-nav-bar>
-    <!-- 
+	<!-- 	
+	<ion-nav-button class="button icon ion-home pull-left" ng-controller="HomeCtrl" ng-click="home()"></ion-nav-button>
+	   <ion-nav-button class="button icon ion-gear-a pull-right" ng-controller="DashCtrl" ng-click="settings()"></ion-nav-button>
+
+	   
+    -->
+	<!-- 
       The views will be rendered in the <ion-nav-view> directive below
       Templates are in the /templates folder (but you could also
       have templates inline in this html file if you'd like).
     -->
-    <ion-nav-view></ion-nav-view>
+    <ion-nav-view>
+	</ion-nav-view>
   </body>
 </html>
