--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+	
+	<!-- angular service for rails devise -->	
+	
   </head>
   <body ng-app="starter" animation="slide-left-right-ios7">
     <!-- 
