--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+	<script src="js/authentication.js"></script>
 	
 	<!-- angular service for rails devise -->	
 	
