--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+	<script type="text/javascript" charset="utf-8" src="js/PushNotification.js"></script>
+	<script type="text/javascript" charset="utf-8" src="js/PushCustom.js"></script>
 	
 	<!-- angular service for rails devise -->	
 	
