Push Notifications with Angular service added

--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+	<script src="js/push.js"></script>
+	
+	<!--- Commented JS, will implement custom Angular service for Push Notifications
 	<script type="text/javascript" charset="utf-8" src="js/PushNotification.js"></script>
 	<script type="text/javascript" charset="utf-8" src="js/PushCustom.js"></script>
-	
+	-->
 	<!-- angular service for rails devise -->	
 	
   </head>
